--- a/Adv .Python Assignment 1.ipynb
+++ b/Adv .Python Assignment 1.ipynb
@@ -4,24 +4,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Q1. What is the purpose of Python's OOP?\n",
-    "Ans-It aims to implement real-world entities like inheritance, polymorphisms, encapsulation, etc. in the programming."
+    "Q1. What is the purpose of Python's OOP?\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Q2. Where does an inheritance search look for an attribute?\n",
-    "Ans-The inheritance search is simply a search of the tree from bottom to top looking for the lowest occurrence of an attribute     name."
+    "Ans1-It aims to implement real-world entities like inheritance, polymorphisms, encapsulation, etc. in the programming."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Q3. How do you distinguish between a class object and an instance object?\n",
-    "Ans-A class is the building block that leads to Object-Oriented Programming. It is a user-defined data type.\n",
+    "Q2. Where does an inheritance search look for an attribute?\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ans2-The inheritance search is simply a search of the tree from bottom to top looking for the lowest occurrence of an attribute     name."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Q3. How do you distinguish between a class object and an instance object?\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ans3-A class is the building block that leads to Object-Oriented Programming. It is a user-defined data type.\n",
     "    An object is an instance of a class. All data members and member functions of the class can be accessed with the help of       objects.Instance object is also called as constructor whereas class object are normal objects of a class."
    ]
   },
@@ -29,40 +47,70 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Q4. What makes the first argument in a class’s method function special?\n",
-    "Ans.The object itself is passed as the first argument to the corresponding function."
+    "Q4. What makes the first argument in a class’s method function special?\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Q5. What is the purpose of the __init__ method?\n",
-    "Ans-\"__init__\" is a reseved method in python classes. It is called as a constructor in object oriented terminology."
+    "Ans4.The object itself is passed as the first argument to the corresponding function."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Q6. What is the process for creating a class instance?\n",
-    "Ans-An object is an instance of a class. All data members and member functions of the class can be accessed with the help of       objects."
+    "Q5. What is the purpose of the __init__ method?\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Q7. What is the process for creating a class?\n",
-    "Ans-A class is the building block that leads to Object-Oriented Programming. It is a user-defined data type."
+    "Ans5-\"__init__\" is a reseved method in python classes. It is called as a constructor in object oriented terminology."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Q8. How would you define the superclasses of a class?\n",
-    "Ans-The class from which a class inherits is called the parent or superclass. A class which inherits from a superclass is           called a subclass, also called their class or child class. Superclasses are sometimes called ancestors as well"
+    "Q6. What is the process for creating a class instance?\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ans6-An object is an instance of a class. All data members and member functions of the class can be accessed with the help of       objects."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Q7. What is the process for creating a class?\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ans7-A class is the building block that leads to Object-Oriented Programming. It is a user-defined data type."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Q8. How would you define the superclasses of a class?\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ans8-The class from which a class inherits is called the parent or superclass. A class which inherits from a superclass is           called a subclass, also called their class or child class. Superclasses are sometimes called ancestors as well."
    ]
   }
  ],
